re PR c++/51613 (Ambiguous function template instantiations as template argument are not rejected)

PR c++/51613
	* pt.c (resolve_overloaded_unification): Compare types with
	same_type_p, not decls_match.

From-SVN: r183099